changes done in about us section

--- a/index.html
+++ b/index.html
@@ -166,29 +166,31 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-12">
 					<p>
-						<q>Imagination is more important than knowledge</q> - Albert Einstein
+						We’ve always aimed to do things a little differently at Buffer. Since the early days, we’ve had
+						a focus on building one
+						of the most unique and fulfilling workplaces by rethinking a lot of traditional practices.
 					</p>
 					<br>
 					<p>
+						A commitment to supporting our team and our customers has helped Buffer grow from humble
+						beginnings to now serving more
+						than 140,000 users. Our passion for making meaningful connections flows through everything we
+						do.
+					</p>
+					<br>
+					<p>
+						We care about building a quality product, trusted relationships with our customers, and a sense
+						of community that
+						connects our customers and team with one another.
 
-						XYZ company is an emerging business solutions company which is form in intent to deliver
-						seamless and high- standard innovation support to develop nourish your business. We are located
-						in Mumbai, which is important national business city.
+						To learn more about our approach to business and work, feel free to hop on over to our Open
+						Blog.
 					</p>
-					<br>
-					<p>
 
-						We offering business value by combining operational excellence we have more than 12 years deep
-						domain knowledge experience in key industrial verticals like BPO, Banking, Financial services
-						Telecom, Automobiles, Insurance Real Estate and Manufacturing IT Device.
-					</p>
-					<br>
-					<p>
-						Our product,Solutions not only covers all the relevant issues that were requested, but also
-						provides a broad outline on the history of XYZ company. and we feel we are best
-						equipped to provide the services required and all the things company needs to reach the high
-						levels of the market with a good efficient status.
-					</p>
+
+
+
+
 
 
 
